welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:0: error: identifier expected but 'final' found.
class ColumnByColumn extends SimpleBuggle {def final() {
                                               ^ColumnByColumn:10: error: illegal start of simple expression
  while (!final()) {
          ^ColumnByColumn:20: error: ')' expected but '}' found.
}
^